syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/procqsrv/proto";

service ProcQ {
  rpc Enqueue(EnqueueRequest) returns (EnqueueResponse);
  rpc GetProc(GetProcRequest) returns (GetProcResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}

message EnqueueRequest {
  ProcProto procProto = 1;
}

message EnqueueResponse {
  string kernelID = 1;
}

message GetProcRequest {
  string kernelID = 1;
  uint32 mem = 2;
}

message GetProcResponse {
  bool oK = 1;
  uint32 mem = 2;
  uint32 qLen = 3;
}

message GetStatsRequest {
}

message GetStatsResponse {
  map<string, int64> nqueued = 1;
}
